--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1261 commands and 945 options.
+This chapter documents a total of 1258 commands and 945 options.
 
 @menu
 * acss-structure::CSS -- Cascaded Speech Style structure.
@@ -171,7 +171,6 @@ This chapter documents a total of 1261 commands and 945 options.
 * emacspeak-racer::Speech-enable RACER.
 * emacspeak-racket::Speech-enable RACKET.
 * emacspeak-re-builder::speech-enable re-builder.
-* emacspeak-redefine::Redefines some key Emacs builtins to speak.
 * emacspeak-reftex::speech enable reftex, Cross-References In La)TeX.
 * emacspeak-related::Speech-enable RELATED buffer switching.
 * emacspeak-remote::Enables running remote Emacspeak sessions.
@@ -1538,7 +1537,6 @@ p		emacspeak-wizards-pdf-open
 s		emacspeak-wizards-shell
 t		twit
 u		list-unicode-display
-v		emacspeak-muggles-vuiet/body
 w		emacspeak-wizards-noaa-weather
 y		yas-expand
 
@@ -1568,14 +1566,13 @@ j		ido-imenu-anywhere
 l		emacspeak-m-player-locate-media
 m		emacspeak-wizards-view-buffers-filtered-by-this-mode
 n		emacspeak-wizards-google-news
-o		emacspeak-muggles-outliner/body
+o		org-switchb
 p		proced
 q		emacspeak-wizards-iex-show-quote
 r		soundscape-restart
 s		soundscape
 t		soundscape-toggle
 u		soundscape-update-mood
-v		emacspeak-muggles-view/body
 w		define-word
 
 .
@@ -1586,14 +1583,12 @@ key             binding
 
 SPC		emacspeak-eww-smart-tabs
 ,		emacspeak-eldoc-speak-doc
-/		emacspeak-origami/body
 a		emacspeak-feeds-atom-display
 b		sox-binaural
 c		emacspeak-wizards-view-buffers-filtered-by-this-mode
 d		sdcv-search-input
 e		eww
 f		emacspeak-wizards-find-file-as-root
-h		emacspeak-muggles-hideshow/body
 i		emacspeak-wizards-iheart
 l		eww-open-file
 m		magit-status
@@ -12853,13 +12848,6 @@ Temporarily use keymap emacspeak-m-player-mode-map
 
 @subsubsection emacspeak-muggles-hideshow/body
 @deffn {Command} emacspeak-muggles-hideshow/body   
-@table @kbd
-@item C-, h
-@kindex C-, h
-@item C-x @@ a h
-@kindex C-x @@ a h
-@end table
-
 @findex emacspeak-muggles-hideshow/body
 
 @format
@@ -13140,15 +13128,6 @@ The body can be accessed via ‘emacspeak-muggles-org-table/body’.
 
 @subsubsection emacspeak-muggles-outliner/body
 @deffn {Command} emacspeak-muggles-outliner/body   
-@table @kbd
-@item C-. o
-@kindex C-. o
-@item C-' o
-@kindex C-' o
-@item C-x @@ s o
-@kindex C-x @@ s o
-@end table
-
 @findex emacspeak-muggles-outliner/body
 
 @format
@@ -13262,15 +13241,6 @@ The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
 
 @subsubsection emacspeak-muggles-view/body
 @deffn {Command} emacspeak-muggles-view/body   
-@table @kbd
-@item C-. v
-@kindex C-. v
-@item C-' v
-@kindex C-' v
-@item C-x @@ s v
-@kindex C-x @@ s v
-@end table
-
 @findex emacspeak-muggles-view/body
 
 @format
@@ -13331,13 +13301,6 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
 
 @subsubsection emacspeak-muggles-vuiet/body
 @deffn {Command} emacspeak-muggles-vuiet/body   
-@table @kbd
-@item C-; v
-@kindex C-; v
-@item C-x @@ h v
-@kindex C-x @@ h v
-@end table
-
 @findex emacspeak-muggles-vuiet/body
 
 @format
@@ -13392,13 +13355,6 @@ The body can be accessed via ‘emacspeak-muggles-yank-pop/body’.
 
 @subsubsection emacspeak-origami/body
 @deffn {Command} emacspeak-origami/body   
-@table @kbd
-@item C-, /
-@kindex C-, /
-@item C-x @@ a /
-@kindex C-x @@ a /
-@end table
-
 @findex emacspeak-origami/body
 
 @format
@@ -15356,59 +15312,6 @@ Personality used for reb-match-3
 This personality uses  voice-lock-overlay-3 whose  effect can be changed globally by customizing voice-lock-overlay-3-settings.
 
 @end defvar
-
-@node emacspeak-redefine
-@section emacspeak-redefine
-
-This module redefines a few vital functions,
-since advising them won't help.
-Convention used:
-To redefine function fn:
-The original function will be renamed to Orig-fn.
-A new function called emacspeak-fn will be defined.
- Finally, we will fset fn to emacspeak-fn
-In the case of backward-char, forward-char, and self-insert-command
-mere redefinition of the function will not do:
-We will need to bind the new functions explicitly to the keys.
-
-@subsection Emacspeak-Redefine Commands
-
-@subsubsection emacspeak-backward-char
-@deffn {Command} emacspeak-backward-char  (&optional arg)
-@findex emacspeak-backward-char
-
-@format
-Backward-char redefined to speak char moved to. 
-
-(fn &optional ARG)
-@end format
-@end deffn
-
-@subsubsection emacspeak-forward-char
-@deffn {Command} emacspeak-forward-char  (&optional arg)
-@findex emacspeak-forward-char
-
-@format
-Forward-char redefined to speak char moved to. 
-
-(fn &optional ARG)
-@end format
-@end deffn
-
-@subsubsection emacspeak-self-insert-command
-@deffn {Command} emacspeak-self-insert-command  (&optional arg)
-@findex emacspeak-self-insert-command
-
-@format
-Insert a character.
-Speaks the character if emacspeak-character-echo is true.
-See  command emacspeak-toggle-word-echo bound to
-C-e d w.
-Speech flushes as you type.
-
-(fn &optional ARG)
-@end format
-@end deffn
 
 @node emacspeak-reftex
 @section emacspeak-reftex
