--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1258 commands and 945 options.
+This chapter documents a total of 1258 commands and 944 options.
 
 @menu
 * acss-structure::CSS -- Cascaded Speech Style structure.
@@ -466,6 +466,7 @@ speech servers.
 @section dtk-speak
 
 Defines the TTS interface.
+Here, prefix dtk is synonymous with tts.
 
 @subsection Dtk-Speak Commands
 
@@ -1123,12 +1124,6 @@ List of ALSA sound devices  we can use.
 
 @end defvar
 
-@defvar {User Option} tts-strip-octals
-Set to T to strip all octal chars before speaking.
-Particularly useful for web browsing.
-
-@end defvar
-
 @node dtk-unicode
 @section dtk-unicode
 
@@ -1537,6 +1532,7 @@ p		emacspeak-wizards-pdf-open
 s		emacspeak-wizards-shell
 t		twit
 u		list-unicode-display
+v		emacspeak-muggles-vuiet/body
 w		emacspeak-wizards-noaa-weather
 y		yas-expand
 
@@ -1566,13 +1562,14 @@ j		ido-imenu-anywhere
 l		emacspeak-m-player-locate-media
 m		emacspeak-wizards-view-buffers-filtered-by-this-mode
 n		emacspeak-wizards-google-news
-o		org-switchb
+o		emacspeak-muggles-outliner/body
 p		proced
 q		emacspeak-wizards-iex-show-quote
 r		soundscape-restart
 s		soundscape
 t		soundscape-toggle
 u		soundscape-update-mood
+v		emacspeak-muggles-view/body
 w		define-word
 
 .
@@ -1583,12 +1580,14 @@ key             binding
 
 SPC		emacspeak-eww-smart-tabs
 ,		emacspeak-eldoc-speak-doc
+/		emacspeak-origami/body
 a		emacspeak-feeds-atom-display
 b		sox-binaural
 c		emacspeak-wizards-view-buffers-filtered-by-this-mode
 d		sdcv-search-input
 e		eww
 f		emacspeak-wizards-find-file-as-root
+h		emacspeak-muggles-hideshow/body
 i		emacspeak-wizards-iheart
 l		eww-open-file
 m		magit-status
@@ -12848,6 +12847,13 @@ Temporarily use keymap emacspeak-m-player-mode-map
 
 @subsubsection emacspeak-muggles-hideshow/body
 @deffn {Command} emacspeak-muggles-hideshow/body   
+@table @kbd
+@item C-, h
+@kindex C-, h
+@item C-x @@ a h
+@kindex C-x @@ a h
+@end table
+
 @findex emacspeak-muggles-hideshow/body
 
 @format
@@ -13128,6 +13134,15 @@ The body can be accessed via ‘emacspeak-muggles-org-table/body’.
 
 @subsubsection emacspeak-muggles-outliner/body
 @deffn {Command} emacspeak-muggles-outliner/body   
+@table @kbd
+@item C-. o
+@kindex C-. o
+@item C-' o
+@kindex C-' o
+@item C-x @@ s o
+@kindex C-x @@ s o
+@end table
+
 @findex emacspeak-muggles-outliner/body
 
 @format
@@ -13241,6 +13256,15 @@ The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
 
 @subsubsection emacspeak-muggles-view/body
 @deffn {Command} emacspeak-muggles-view/body   
+@table @kbd
+@item C-. v
+@kindex C-. v
+@item C-' v
+@kindex C-' v
+@item C-x @@ s v
+@kindex C-x @@ s v
+@end table
+
 @findex emacspeak-muggles-view/body
 
 @format
@@ -13301,6 +13325,13 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
 
 @subsubsection emacspeak-muggles-vuiet/body
 @deffn {Command} emacspeak-muggles-vuiet/body   
+@table @kbd
+@item C-; v
+@kindex C-; v
+@item C-x @@ h v
+@kindex C-x @@ h v
+@end table
+
 @findex emacspeak-muggles-vuiet/body
 
 @format
@@ -13355,6 +13386,13 @@ The body can be accessed via ‘emacspeak-muggles-yank-pop/body’.
 
 @subsubsection emacspeak-origami/body
 @deffn {Command} emacspeak-origami/body   
+@table @kbd
+@item C-, /
+@kindex C-, /
+@item C-x @@ a /
+@kindex C-x @@ a /
+@end table
+
 @findex emacspeak-origami/body
 
 @format
