--- a/info/.spell.tex
+++ b/info/.spell.tex
@@ -35,8 +35,8 @@ Auctex
 AucTeX
 AUCTeX
 autoload
-automagically
 autopan
+autosat
 autospeak
 axies
 backend
@@ -62,7 +62,6 @@ boop
 brf
 browsable
 bsf
-builtins
 bz
 calc
 calc's
@@ -176,6 +175,8 @@ Ediff
 editting
 edmacro
 eflite
+eglot
+EGLOT
 ein
 Ein
 EIN
@@ -185,6 +186,7 @@ elfeed
 Elfeed
 ELFEED
 elisp
+Elisp
 ELISP
 Eloquennce
 elpa
@@ -249,6 +251,8 @@ flipflop
 Flite
 flycheck
 FLYCHECK
+flymake
+FLYMAKE
 flyspell
 fmt
 fn
@@ -256,7 +260,6 @@ foldoc
 FreeSound
 frontends
 Frontpage
-fset
 ftf
 FTF
 fulltext
@@ -327,8 +330,6 @@ Installable
 interp
 invada
 iplayer
-iPlayer
-IPlayer
 IPython
 isearch
 JDB
@@ -368,6 +369,7 @@ lispy
 Lispy
 LISPY
 loc
+LSP
 lua
 LUA
 magit
@@ -384,6 +386,7 @@ mcp
 MDash
 melpa
 mELPA
+Melpa
 MELPA
 metapost
 minibuffer
@@ -439,6 +442,8 @@ opml
 OPML
 O'Reilly
 OReilly
+orgalist
+ORGALIST
 OSS
 outliner
 outloud
@@ -461,7 +466,6 @@ pianobar
 Pianobar
 PIANOBAR
 pid
-PID
 pos
 posn
 ppt
@@ -541,6 +545,8 @@ screenful
 screenfull
 screenreader
 screenreaders
+sdcv
+SDCV
 SDK
 sel
 ses
@@ -572,6 +578,8 @@ speedbar
 Speedbar
 src
 Stallman
+stardict
+Stardict
 stationid
 stderr
 stdin
@@ -593,6 +601,8 @@ supercite
 swh
 symlink
 symlinks
+syslog
+SYSLOG
 tbm
 tcl
 TCL
@@ -612,6 +622,7 @@ toc
 TOC
 todo
 toolbelt
+tooltip
 tooltips
 TPJ
 transcode
@@ -706,6 +717,7 @@ wip
 wishlist
 WordNet
 Wowser
+Wunderground
 wvText
 xa
 xbacklight
@@ -736,6 +748,9 @@ YAML
 yasnippet
 YASNIPPET
 yql
+ytel
+Ytel
+YTEL
 yy
 yyyy
 yyyymmdd
