--- a/announcements/gnus-gmail-search.org
+++ b/announcements/gnus-gmail-search.org
@@ -21,7 +21,7 @@ GMail setup using Ceasar's excellent _auth-xoauth2_ package, see file
 GMail is accessed from GNUS using the imap protocol.
 The _imap_ specification defines a set of standard search operators;
 GMail itself defines a  slightly different and arguably easier to use
-set of search operators. Module _gm-nnir_ refered to above implements
+set of search operators. Module [[https://github.com/tvraman/emacspeak/blob/master/lisp/g-client/gm-nnir.el][gm-nnir]] refered to above implements
 both the  standard IMap search operator as well as GMail's search
 operators; in practice, I have mostly only used the GMail Search
 operators in the last 8 years since implementing this module.
