--- a/info/docs.texi
+++ b/info/docs.texi
@@ -83,10 +83,8 @@ This chapter documents a total of 1256 commands and 920 options.
 * emacspeak-eudc::Speech enable  LDAP directory client.
 * emacspeak-evil::Speech-enable EVIL.
 * emacspeak-eww::Speech-enable EWW Browser.
-* emacspeak-facemenu::Map default Emacs faces like bold to appropriate speech personalities.
 * emacspeak-feeds::Feeds Support (Atom, RSS) For Emacspeak.
 * emacspeak-filtertext::Utilities to filter text.
-* emacspeak-find-dired::Speech enable  find-dired.
 * emacspeak-find-func::Speech enable emacs' code finder.
 * emacspeak-fix-interactive::Make  Emacs' builtin prompts   speak.
 * emacspeak-flycheck::Speech-enable FLYCHECK.
@@ -3276,7 +3274,7 @@ This personality uses  voice-bolden whose  effect can be changed globally by cus
 @node emacspeak-c
 @section emacspeak-c
 
-Make some of C and C++ mode more emacspeak friendly
+Make  C and C++ mode more emacspeak friendly
 Works with both boring c-mode
 and the excellent cc-mode
 
@@ -7735,11 +7733,6 @@ This personality uses  voice-annotate whose  effect can be changed globally by c
 
 @end defvar
 
-@node emacspeak-facemenu
-@section emacspeak-facemenu
-
-Map standard faces such as bold and italic to voices.
-
 @node emacspeak-feeds
 @section emacspeak-feeds
 
@@ -7961,12 +7954,6 @@ during initialization.
 Revert to original text.
 @end format
 @end deffn
-
-@node emacspeak-find-dired
-@section emacspeak-find-dired
-
-find-dired is an emacs package for using UNIX find from emacs.
-this module speech-enables find-dired
 
 @node emacspeak-find-func
 @section emacspeak-find-func
